# autokeren

./: .ak-ghost-2.json  .ak-ghost-3.json  .ak-ghost-4.json  .ak-ghost-5.json  .ak-ghost-6.json  .ak-ghost-7.json  .ak-repomap.cache  .gitignore  AGENTS.md  BUILD_DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI_3.5_ERROR_REPORT.md  LICENSE  MIGRATION_PLAN.md  Makefile  README.es.md  README.id.md  README.ja.md  README.md  README.pt-BR.md  README.zh-CN.md  TODOLIST.md  config.example.yaml  go.mod  go.sum  main.go  pyproject.toml  toko-sendal-modern-worker.js  toko-sendal-modern-worker.js.bak-20260705-052811  toko-sendal-worker.js  toko-sepatu-worker.js  worker-kopi-juara.js  worker.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
apps/kopi-juara/: build.js  build.js.bak-20260711-131401  package-lock.json  package.json  package.json.bak-20260711-131350
autokeren/: __init__.py  __main__.py  agent.py  cli.py  commands.py  config.py  context.py  daemon.py  diagram.py  fddm_hook.py  memory.py  mermaid.py  prompts.py  security.py  selector.py  session.py  signing.py  telegram_gateway.py  telegram_gateway.py.bak-20260715-015010  tui.py  ui.py  utils.py
autokeren/autoplan/: __init__.py  decomposer.py  executor.py.bak-20260715-014548  executor.py.bak-20260715-015211  reflection.py  tracker.py  tracker.py.bak-20260715-015138
autokeren/checkpoints/: __init__.py  manager.py  storage.py
autokeren/commands/: __init__.py  sync.py
cmd/: bootstrap.go  bootstrap_test.go  root.go
docs/: ARCHITECTURE.md  BUILD_WEEK_2026_HANDOFF.md  DECISIONS.md  JOURNEY.md  ROADMAP.md
ghost/: manager.go  manager_test.go  policy.go  policy_test.go  process.go  process_unix.go  process_windows.go
ipc/: browser.go  client.go  client_test.go
scratch/: test_preview.py
scripts/: e2e-go.sh  release.sh
tests/: test_aistudio.py  test_antigravity.py  test_camofox.py  test_collaborate.py  test_daemon_observer.py  test_dynamic_loader.py  test_enforcer.py  test_fddm.py  test_genome.py  test_ghost.py  test_git_integration.py  test_kanban_db.py  test_kanban_tool.py  test_loop.py  test_memory_db.py  test_mermaid.py  test_openai.py  test_path_security.py  test_proof.py  test_repo_map.py  test_research.py  test_review.py  test_rewind.py  test_security.py  test_self_evolution.py  test_session.py  test_spec.py  test_tdd.py  test_tmux.py  test_tools.py
toko-sendal-jempol/: worker.js  worker.js.bak-20260705-051833
ui/: chat.go  chat_test.go  debate.go  kanban.go  layout.go  layout_test.go  sidebar.go  sidebar_test.go
(+178 files in other folders)
