[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autokeren"
version = "0.1.0"
description = "Custom Cloudflare-first agentic coding CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "strictyaml>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
autokeren = "autokeren.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autokeren"]

[tool.ruff]
line-length = 120
