[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autokeren"
version = "0.8.1"
description = "Cloudflare-first agentic coding CLI untuk developer Indonesia dan global"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "autokeren contributors"},
]
keywords = [
    "cloudflare",
    "agentic",
    "coding-assistant",
    "cli",
    "workers-ai",
    "kimi",
    "glm",
    "agent",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "strictyaml>=1.7",
    "pyfiglet>=1.0",
    "textual>=0.50.0",
]


[project.urls]
Homepage = "https://github.com/autokeren/autokeren"
Repository = "https://github.com/autokeren/autokeren"
Issues = "https://github.com/autokeren/autokeren/issues"
Documentation = "https://github.com/autokeren/autokeren#readme"
Changelog = "https://github.com/autokeren/autokeren/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
autokeren = "autokeren.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["autokeren"]

[tool.ruff]
line-length = 120
